pkl-core/src/test/files/LanguageSnippetTests/input/errors/typeMismatchWithSameQualifiedClassName.pkl
module foo.bar

import "typeMismatchHelper.pkl"

class Baz

baz: Baz = new typeMismatchHelper.Baz {}
